--- a/website/package.json
+++ b/website/package.json
@@ -21,9 +21,10 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
+    "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.4.0"
   }
