--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "duckbake",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
+    "dev:website": "cd website && bun dev",
+    "deploy:website": "cd website && fly deploy",
     "release": "tauri build",
     "release:mac": "tauri build --target universal-apple-darwin",
     "release:mac-arm": "tauri build --target aarch64-apple-darwin",
