--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,5 +67,5 @@ jobs:
           draft: true
           generate_release_notes: true
           files: |
-            artifacts/**/*.dmg
+            artifacts/DuckBake-macOS/*.dmg
             artifacts/DuckBake-macOS.dmg
