--- a/website/package.json
+++ b/website/package.json
@@ -25,6 +25,7 @@
     "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.4.0"
   }
