Add more debug for signing key

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,9 +33,14 @@ jobs:
       - name: Debug key format
         run: |
           echo "Key length: ${#TAURI_SIGNING_PRIVATE_KEY}"
-          echo "First 15 chars: ${TAURI_SIGNING_PRIVATE_KEY:0:15}"
+          echo "First 20 chars: ${TAURI_SIGNING_PRIVATE_KEY:0:20}"
+          echo "Char at position 12: ${TAURI_SIGNING_PRIVATE_KEY:12:1}"
+          echo "Hex dump of first 20 chars:"
+          echo -n "${TAURI_SIGNING_PRIVATE_KEY:0:20}" | xxd
+          echo "Password length: ${#TAURI_SIGNING_PRIVATE_KEY_PASSWORD}"
         env:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
 
       - name: Build universal macOS app
         run: bun run release:mac
