UI Polish, Import and Export of Projects, Better Document suppoert, Context switcher for chat, Chat UI polish

--- a/src-tauri/tauri.appstore.conf.json
+++ b/src-tauri/tauri.appstore.conf.json
@@ -1,5 +1,10 @@
 {
   "$schema": "https://schema.tauri.app/config/2",
+  "app": {
+    "security": {
+      "capabilities": ["appstore"]
+    }
+  },
   "bundle": {
     "macOS": {
       "entitlements": "./Entitlements.plist",
@@ -9,9 +14,5 @@
       "signingIdentity": "3rd Party Mac Developer Application"
     }
   },
-  "plugins": {
-    "updater": {
-      "active": false
-    }
-  }
+  "plugins": {}
 }
