--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@catppuccin/codemirror": "^1.0.1",
     "@codemirror/lang-sql": "^6",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1",
     "@radix-ui/react-dropdown-menu": "^2",
     "@radix-ui/react-progress": "^1.1.8",
@@ -55,17 +56,18 @@
     "react-router-dom": "^7",
     "recharts": "^3.6.0",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.21.0",
     "tailwind-merge": "^2",
     "zustand": "^5"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4",
+    "@tauri-apps/cli": "^2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
-    "typescript": "~5.8.3",
-    "vite": "^7.0.4",
-    "@tauri-apps/cli": "^2",
     "tailwindcss": "^4",
-    "@tailwindcss/vite": "^4"
+    "typescript": "~5.8.3",
+    "vite": "^7.0.4"
   }
 }
