--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,6 +9,11 @@ edition = "2021"
 name = "duckbake_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
+[features]
+default = ["updater"]
+updater = ["dep:tauri-plugin-updater", "dep:tauri-plugin-process"]
+appstore = []
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
@@ -18,8 +23,9 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
-tauri-plugin-updater = "2"
-tauri-plugin-process = "2"
+tauri-plugin-updater = { version = "2", optional = true }
+tauri-plugin-process = { version = "2", optional = true }
+tauri-plugin-window-state = "2"
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
@@ -37,6 +43,13 @@ reqwest = { version = "0.12", features = ["json", "stream"] }
 # File parsing
 calamine = "0.26"
 csv = "1.3"
+
+# Document parsing
+pdf-extract = "0.8"
+lopdf = "0.33"
+zip = "2.2"
+quick-xml = "0.36"
+pulldown-cmark = "0.10"
 
 # Utilities
 uuid = { version = "1", features = ["v4", "serde"] }
