--- a/src-tauri/capabilities/appstore.json
+++ b/src-tauri/capabilities/appstore.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../gen/schemas/desktop-schema.json",
-  "identifier": "default",
-  "description": "Capability for direct distribution (with updater)",
+  "identifier": "appstore",
+  "description": "Capability for App Store builds (no updater)",
   "windows": ["main"],
   "permissions": [
     "core:default",
@@ -26,8 +26,6 @@
         { "path": "$DOWNLOAD/**" },
         { "path": "$DOCUMENT/**" }
       ]
-    },
-    "updater:default",
-    "process:allow-restart"
+    }
   ]
 }
